Исправление конфликта